# inventory_python

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
helps/: commands.txt
src/agentic_system/: basemodels.py  nodes_and_conditions.py  portuguese_prompts.py  states.py  utils_async.py
src/api/: app.py  schemas.py  security.py
src/api/routers/: auth.py  items.py  users.py
src/client/: utils_httpx.py
src/database/: database.py
src/model/: models.py
src/telegram/: telegram.py
